--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,102 @@
+version: '3.8'
+
 services:
-  app:
+  api:
     build:
       context: .
       dockerfile: Dockerfile
-      target: prod
-    restart: unless-stopped
-    ports:
-      - ${PORT}:${PORT}
+    restart: always
     environment:
-      APP_ENV: ${APP_ENV}
-      PORT: ${PORT}
-      BLUEPRINT_DB_HOST: ${BLUEPRINT_DB_HOST}
-      BLUEPRINT_DB_PORT: ${BLUEPRINT_DB_PORT}
-      BLUEPRINT_DB_DATABASE: ${BLUEPRINT_DB_DATABASE}
-      BLUEPRINT_DB_USERNAME: ${BLUEPRINT_DB_USERNAME}
-      BLUEPRINT_DB_PASSWORD: ${BLUEPRINT_DB_PASSWORD}
-      BLUEPRINT_DB_SCHEMA: ${BLUEPRINT_DB_SCHEMA}
+      - PORT=8080
+      - APP_ENV=${APP_ENV}
+      - DB_DSN=${DB_DSN}
+      - REDIS_ADDR=${REDIS_ADDR}
+      - JWT_SECRET=${JWT_SECRET}
+      - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_SENDER=${SMTP_SENDER}
+      - SMTP_USER=${SMTP_USER}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
     depends_on:
-      psql_bp:
+      postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     networks:
-      - blueprint
-  psql_bp:
-    image: postgres:latest
-    restart: unless-stopped
+      - traefik-public
+      - backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=traefik-public"
+      - "traefik.constraint-label=traefik-public"
+      - "traefik.http.services.api.loadbalancer.server.port=8080"
+      - "traefik.http.routers.api-http.rule=Host(`api.${DOMAIN?Variable not set}`)"
+      - "traefik.http.routers.api-http.entrypoints=http"
+      - "traefik.http.routers.api-http.middlewares=https-redirect"
+      - "traefik.http.routers.api-https.rule=Host(`api.${DOMAIN?Variable not set}`)"
+      - "traefik.http.routers.api-https.entrypoints=https"
+      - "traefik.http.routers.api-https.tls=true"
+      - "traefik.http.routers.api-https.tls.certresolver=le"
+
+  postgres:
+    image: postgres:16-alpine
+    restart: always
     environment:
-      POSTGRES_DB: ${BLUEPRINT_DB_DATABASE}
-      POSTGRES_USER: ${BLUEPRINT_DB_USERNAME}
-      POSTGRES_PASSWORD: ${BLUEPRINT_DB_PASSWORD}
-    ports:
-      - "${BLUEPRINT_DB_PORT}:5432"
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
-      - psql_volume_bp:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${BLUEPRINT_DB_USERNAME} -d ${BLUEPRINT_DB_DATABASE}'"]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}" ]
       interval: 5s
       timeout: 5s
-      retries: 3
-      start_period: 15s
+      retries: 5
     networks:
-      - blueprint
+      - backend
+
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@example.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
+    networks:
+      - traefik-public
+      - backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=traefik-public"
+      - "traefik.constraint-label=traefik-public"
+      - "traefik.http.services.pgadmin.loadbalancer.server.port=80"
+      - "traefik.http.routers.pgadmin-http.rule=Host(`pgadmin.${DOMAIN?Variable not set}`)"
+      - "traefik.http.routers.pgadmin-http.entrypoints=http"
+      - "traefik.http.routers.pgadmin-http.middlewares=https-redirect"
+      - "traefik.http.routers.pgadmin-https.rule=Host(`pgadmin.${DOMAIN?Variable not set}`)"
+      - "traefik.http.routers.pgadmin-https.entrypoints=https"
+      - "traefik.http.routers.pgadmin-https.tls=true"
+      - "traefik.http.routers.pgadmin-https.tls.certresolver=le"
+
+  redis:
+    image: redis:7-alpine
+    restart: always
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - backend
 
 volumes:
-  psql_volume_bp:
+  postgres_data:
+  redis_data:
+
+
 networks:
-  blueprint:
+  backend:
+  traefik-public:
+    external: true
